Fixed spacing stuff and made controls hide even when not fullscreen

--- a/css/player.css
+++ b/css/player.css
@@ -128,7 +128,7 @@
 	display: inline-block;
 	vertical-align: top;
 	margin: 7px 0;
-	padding: 0 0 0 8px;
+	padding: 0 0 2px 7px;
 	position: relative;
 	background: #c4c4c4;
 }
@@ -138,6 +138,7 @@
 	width: 0;
 	display: inline-block;
 	padding-left: 10px;
+	padding-right: 5px;
 }
 
 .sliderLevel {
@@ -155,8 +156,8 @@
 
 
 .ayamelPlayer .progressKnob {
-	width: 13px;
-	height: 13px;
+	width: 15px;
+	height: 15px;
 	margin-left: -10px;
 
 	-webkit-border-radius: 7px;
@@ -165,8 +166,8 @@
 }
 
 .sliderKnob {
-	width: 13px;
-	height: 13px;
+	width: 15px;
+	height: 15px;
 	margin-left: -7px;
 
 	-webkit-border-radius: 7px;
@@ -181,6 +182,7 @@
 	vertical-align: top;
 	position: relative;
 	background: #0582CA;
+	z-index: 1;
 }
 
 .ayamelPlayer .controlBar {
@@ -288,9 +290,8 @@
 .ayamelPlayer .annotations .icon {
 	position: relative;
 	height: 16px;
-	widht: 20px;
+	width: 20px;
 	background: url("../images/annotations.png") center no-repeat;
-	background-size: 15px;
 }
 
 .ayamelPlayer .menu {
@@ -444,44 +445,33 @@
 }
 
 .ayamelPlayer:-webkit-full-screen .controlBar {
-	-webkit-border-radius: 0;
-	-moz-border-radius: 0;
-	border-radius: 0;
-	position: fixed;
+	position: relative;
 	bottom: 0;
+	z-index: 1;
 }
 .ayamelPlayer:-moz-full-screen .controlBar {
-	-webkit-border-radius: 0;
-	-moz-border-radius: 0;
-	border-radius: 0;
-	position: fixed;
+	position: relative;
 	bottom: 0;
+	z-index: 1;
 }
 .ayamelPlayer:-o-full-screen .controlBar {
-	-webkit-border-radius: 0;
-	-moz-border-radius: 0;
-	border-radius: 0;
-	position: fixed;
+	position: relative;
 	bottom: 0;
+	z-index: 1;
 }
 .ayamelPlayer:-ms-full-screen .controlBar {
-	-webkit-border-radius: 0;
-	-moz-border-radius: 0;
-	border-radius: 0;
-	position: fixed;
+	position: relative;
 	bottom: 0;
+	z-index: 1;
 }
 .ayamelPlayer:full-screen .controlBar {
-	-webkit-border-radius: 0;
-	-moz-border-radius: 0;
-	border-radius: 0;
-	position: fixed;
+	position: relative;
 	bottom: 0;
+	z-index: 1;
 }
 
 .ayamelPlayer.pseudoFullScreen {
 	position: fixed;
-	top: 0;
 	left: 0;
 	width: 100%;
 }
